# tensorpipe

./: CMakeLists.txt
.circleci/: config.yml
cmake/: Finduv.cmake  Options.cmake  TensorpipeConfig.cmake  protobuf-generate.cmake  tensorpipe-config.cmake
tensorpipe/: CMakeLists.txt  tensorpipe.h
tensorpipe/benchmark/: CMakeLists.txt  benchmark_pipe.cc  benchmark_transport.cc  measurements.h  options.cc  options.h
tensorpipe/channel/: channel.cc  channel.h  helpers.h
tensorpipe/channel/basic/: basic.cc  basic.h
tensorpipe/channel/cuda/: channel.cc  channel.h  context.cc  context.h
tensorpipe/channel/cuda_gdr/: channel_impl.cc  channel_impl.h
tensorpipe/common/: address.cc  address.h  callback.h  defs.h  error.cc  error.h  optional.h  queue.h  system.cc  system.h
tensorpipe/core/: buffer.h  context.cc  context.h  context_impl.cc  context_impl.h  error.cc  error.h  listener.cc  listener.h  message.h  nop_types.h  pipe.cc  pipe.h  pipe_impl.cc
tensorpipe/proto/: CMakeLists.txt
tensorpipe/proto/channel/: cuda.proto
tensorpipe/python/: tensorpipe.cc
tensorpipe/test/: CMakeLists.txt  test.cc
tensorpipe/test/channel/: channel_test.cc  channel_test.h
tensorpipe/test/channel/basic/: basic_test.h
tensorpipe/test/channel/cuda/: cuda_test.cc
tensorpipe/test/core/: context_test.cc  pipe_cuda_test.cc  pipe_test.cc  pipe_test.h
tensorpipe/test/transport/: connection_test.cc  transport_test.h
tensorpipe/test/transport/shm/: connection_test.cc  loop_test.cc  reactor_test.cc  shm_test.h
tensorpipe/test/transport/uv/: connection_test.cc  loop_test.cc  sockaddr_test.cc  uv_test.h
tensorpipe/test/util/ringbuffer/: protobuf_streams_test.cc  ringbuffer_test.cc
tensorpipe/transport/: connection.cc  connection.h  context.h  defs.h  error.cc  error.h  listener.h
tensorpipe/transport/shm/: connection.cc  connection.h  context.cc  context.h  fd.cc  fd.h  listener.cc  listener.h  loop.cc  loop.h  reactor.cc  reactor.h  socket.cc  socket.h
tensorpipe/transport/uv/: connection.cc  connection.h  context.cc  context.h  error.cc  error.h  listener.cc  listener.h  loop.cc  loop.h  sockaddr.cc  sockaddr.h  uv.cc  uv.h
tensorpipe/util/ringbuffer/: consumer.h  producer.h  protobuf_streams.h  ringbuffer.h  shm.cc  shm.h
tensorpipe/util/shm/: segment.cc  segment.h
